Updated from feedback round 1
Incorporated as many of the suggestions as I can from this first round.

--- a/archives.html
+++ b/archives.html
@@ -25,13 +25,12 @@
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
  
 
-    <meta name="author" content="The Unbound Nomad" />
+    <meta name="author" content="Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
@@ -65,30 +64,27 @@
             <li>
               <a target="_self"
                  href="./pages/about.html#about">
-                About
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="./pages/rides.html#rides">
-                Rides
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -139,94 +135,94 @@
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/blue-ridge-parkway-tour.html">Blue Ridge Parkway Tour</a>
+          <a href="./blue-ridge-parkway-tour.html">Blue Ridge Parkway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/daytona-bike-week.html">Daytona Bike Week</a>
+          <a href="./daytona-bike-week.html">Daytona Bike Week</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/ohio-bike-week.html">Ohio Bike Week</a>
+          <a href="./ohio-bike-week.html">Ohio Bike Week</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/sturgis-motorcycle-rally.html">Sturgis Motorcycle Rally</a>
+          <a href="./sturgis-motorcycle-rally.html">Sturgis Motorcycle Rally</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/yellowstone-national-park-tour.html">Yellowstone National Park Tour</a>
+          <a href="./yellowstone-national-park-tour.html">Yellowstone National Park Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/beartooth-highway-tour.html">Beartooth Highway Tour</a>
+          <a href="./beartooth-highway-tour.html">Beartooth Highway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/cherohalaskyway-tour.html">Cherohala Skyway Tour</a>
+          <a href="./cherohalaskyway-tour.html">Cherohala Skyway Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/skyline-drive-tour.html">Skyline Drive Tour</a>
+          <a href="./skyline-drive-tour.html">Skyline Drive Tour</a>
         </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
-          <a href="./blog/tail-of-the-dragon-tour.html">Tail of the Dragon Tour</a>
+          <a href="./tail-of-the-dragon-tour.html">Tail of the Dragon Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./blog/native-american-scenic-byway-tour.html">Native American Scenic Byway Tour</a>
+          <a href="./native-american-scenic-byway-tour.html">Native American Scenic Byway Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./blog/badlands-tour.html">Badlands Tour</a>
+          <a href="./badlands-tour.html">Badlands Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./blog/devils-tower-tour.html">Devil's Tower Tour</a>
+          <a href="./devils-tower-tour.html">Devil's Tower Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./blog/natchez-trace-tour.html">Natchez Trace Tour</a>
+          <a href="./natchez-trace-tour.html">Natchez Trace Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./blog/ohios-windy-9-tour.html">Ohio's Windy 9 Tour</a>
+          <a href="./ohios-windy-9-tour.html">Ohio's Windy 9 Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./blog/northwest-passage-scenic-byway-tour.html">Northwest Passage Scenic Byway Tour</a>
+          <a href="./northwest-passage-scenic-byway-tour.html">Northwest Passage Scenic Byway Tour</a>
         </dd>
           <dt>Sat 13 January 2024</dt>
 
         <dd>
-          <a href="./blog/san-juan-mountain-skyway-tour.html">San Juan Mountain Skyway Tour</a>
+          <a href="./san-juan-mountain-skyway-tour.html">San Juan Mountain Skyway Tour</a>
         </dd>
           <dt>Sun 19 March 2023</dt>
 
         <dd>
-          <a href="./blog/stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a>
+          <a href="./stay-safe-ride-hard.html">Stay Safe and Prepared: 10 Tips for Riding Your Motorcycle in the Rain</a>
         </dd>
     </dl>
   </div>
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
