--- a/categories.html
+++ b/categories.html
@@ -25,13 +25,12 @@
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
  
 
-    <meta name="author" content="The Unbound Nomad" />
+    <meta name="author" content="Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
@@ -65,30 +64,27 @@
             <li>
               <a target="_self"
                  href="./pages/about.html#about">
-                About
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="./pages/rides.html#rides">
-                Rides
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -146,7 +142,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
