--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
  
 
-    <meta name="author" content="The Unbound Nomad" />
+    <meta name="author" content="Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
@@ -42,7 +41,7 @@
 
 
 
-  <title>The Unbound Nomad &ndash; Explore without limits!</title>
+  <title>The Unbound Nomad &ndash; Explore without Limits!</title>
 
 
 </head>
@@ -67,30 +66,27 @@
             <li>
               <a target="_self"
                  href="./pages/about.html#about">
-                About
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="./pages/rides.html#rides">
-                Rides
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -134,12 +130,16 @@
 <article class="single">
   <header>
     
-    <h1 id="homepage">Explore without limits!</h1>
+    <h1 id="homepage"><b>Explore without Limits!</b></h1>
   </header>
   <div>
-<p><img alt="Hero Image" src="./images/heroImage_trimmed.jpg" style="display: block; margin: 0 auto"> </p>
-<h1>Customized Motorcycle Adventure Packages.</h1>
+<!-- Centered -->
+<!-- ![Crazy Horse]({static}..\images\crazyHorse.png){: width=550 height=550 style="display: block; margin: 0 auto"} -->
+<!-- Left Aligned -->
+<p><img alt="Crazy Horse" src="./images/crazyHorse.png" style="margin: 0 auto" width="70%"></p>
+<h2>Customized Motorcycle Adventure Packages</h2>
 <div style="text-align: justify">The Unbound Nomad's curated motorcycle experiences redefine adventure travel, offering enthusiasts tailored tours that seamlessly blend thrill and comfort. Our all-inclusive travel packages cater to the wanderlust of riders, providing a one-stop solution for unforgettable journeys. Picture yourself embarking on a scenic ride, knowing that every detail, from route planning to accommodations, and everything in between, has been expertly curated by fellow riders who share your passion. Our unique approach goes beyond conventional travel, fostering a vibrant community where riders share stories, tips, and build lasting connections. With The Unbound Nomad, you're not just on a tour; you're part of an exclusive adventure-seeking family, where every ride is an opportunity to explore, connect, and embrace the freedom of the open road. Join us and elevate your motorcycle adventures to new heights.</div>
+<p><br></p>
 <!-- HTML -->
 <div style="text-align: center;">
   <button class="button-36" role="button" onclick="sendEmail()">Book Today!</button>
@@ -148,14 +148,14 @@
 <!-- JavaScript -->
 <script>
   function sendEmail() {
-    window.location.href = "mailto:unboundnomad@unboundnomad.com?subject=Booking Inquiry";
+    window.location.href = "https://form.jotform.com/240327747576162";
   }
 </script>
 
 <!-- CSS -->
 <style>
   .button-36 {
-    background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #750AA8 64.72%);
+    background-color: #750AA8;
     border-radius: 8px;
     border-style: none;
     box-sizing: border-box;
@@ -187,109 +187,16 @@
   }
 </style>
 <p><br></p>
-<h1>Featured Package: Sunshine Run 2024</h1>
-<div style="text-align: justify">The Sunshine Run 2024 will take riders from Columbus, Ohio, to Daytona Bike week in Daytona Beach, Florida. Registered riders will enjoy a 2-day guided ride to one of the best-known motorcycle rallies in the world, including fuel, food, lodging, and all other accommodations along the way. Spend 6 days and 7 nights in sunng Daytona Beach, Florida shopping countless vendors, catching stunt shows, bike shows, short track races, and even the famous Burning Bike event! Participants are sure to make countless memories with friends new and old at Daytona Bike Week.</div>
-<!-- HTML -->
-<div style="text-align: center;">
-  <button class="button-36" role="button" onclick="showAlert()">Book Today!</button>
-</div>
+<h2>Featured Package: Sunshine Run 2024</h2>
+<div style="text-align: justify">The Sunshine Run 2024 will take riders from Columbus, Ohio, to Daytona Bike week in Daytona Beach, Florida. Registered riders will enjoy a 2-day guided ride to one of the best-known motorcycle rallies in the world, including fuel, food, lodging, and all other accommodations along the way. Spend 6 days and 7 nights in sunny Daytona Beach, Florida shopping countless vendors, catching stunt shows, bike shows, short track races, and even the famous Burning Bike event! Participants are sure to make countless memories with friends new and old at Daytona Bike Week.</div>
 
-<!-- JavaScript -->
-<script>
-  function showAlert() {
-    alert("We're sorry, this trip has been SOLD OUT!");
-  }
-</script>
-
-<!-- CSS -->
-<style>
-  .button-36 {
-    background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-    border-radius: 8px;
-    border-style: none;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    height: 4rem;
-    padding: 0 1.6rem;
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-    transition: all .5s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-  }
-
-  .button-36:hover {
-    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-    transition-duration: .1s;
-  }
-
-  @media (min-width: 768px) {
-    .button-36 {
-      padding: 0 2.6rem;
-    }
-  }
-</style>
-<p><img alt="Daytona Bike Week" src="./images/daytona.jpg" style="display: block; margin: 0 auto"> 
-<br></p>
-<h1>Who We Are</h1>
-<div style="text-align: justify">Discover custom motorcycle adventures with The Unbound Nomad, your gateway to thrilling journeys across the United States. Our meticulously curated vacation packages cater to every rider's unique desires, from scenic day tours to iconic events like Sturgis or Daytona Bike Week. What sets us apart is our commitment to handling every detail, allowing you to focus solely on enjoying the ride. Whether you're a seasoned rider or a newcomer, our packages, complemented by comfortable lodging, transcend the ordinary. With The Unbound Nomad, redefine motorcycle travel, and let every moment on the road become an indelible memory. Explore without limits – gear up, rev your engines, and let the unforgettable journey begin!</div>
-<!-- HTML -->
-<div style="text-align: center;">
-  <button class="button-36" role="button" onclick="sendEmail()">Book Today!</button>
-</div>
-
-<!-- JavaScript -->
-<script>
-  function sendEmail() {
-    window.location.href = "mailto:unboundnomad@unboundnomad.com?subject=Booking Inquiry";
-  }
-</script>
-
-<!-- CSS -->
-<style>
-  .button-36 {
-    background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #750AA8 64.72%);
-    border-radius: 8px;
-    border-style: none;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    height: 4rem;
-    padding: 0 1.6rem;
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-    transition: all .5s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-  }
-
-  .button-36:hover {
-    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-    transition-duration: .1s;
-  }
-
-  @media (min-width: 768px) {
-    .button-36 {
-      padding: 0 2.6rem;
-    }
-  }
-</style>
-<p><br></p>  </div>
+<p><img alt="Daytona 2023" src="./images/daytona.jpg" style="display: block; margin: 0 auto"> </p>
+<h2>Who We Are</h2>
+<div style="text-align: justify">Discover custom motorcycle adventures with The Unbound Nomad, your gateway to thrilling journeys across the United States. Our meticulously curated vacation packages cater to every rider's unique desires, from scenic day tours to iconic events like Sturgis or Daytona Bike Week. What sets us apart is our commitment to handling every detail, allowing you to focus solely on enjoying the ride. Whether you're a seasoned rider or a newcomer, our packages, complemented by comfortable lodging, transcend the ordinary. With The Unbound Nomad, redefine motorcycle travel, and let every moment on the road become an indelible memory. Explore without limits – gear up, rev your engines, and let the unforgettable journey begin! <b><u><a href="https://form.jotform.com/240327747576162">Book today!</a></u></b></div>  </div>
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
