--- a/blue-ridge-parkway-tour.html
+++ b/blue-ridge-parkway-tour.html
@@ -10,22 +10,21 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/github.min.css">
+          href="./theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
 
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
@@ -40,11 +39,11 @@
   <meta property="og:title" content="Blue Ridge Parkway Tour"/>
   <meta property="og:description" content="Distance : Ride Time 469 miles : Ride time: 9.5 hours The Blue Ridge Parkway is a National Parkway and All-American Road in the United States, noted for its scenic beauty. The parkway, which is America&#39;s longest linear park, runs for 469 miles through 29 counties in Virginia and North Carolina …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../blog/blue-ridge-parkway-tour.html"/>
+  <meta property="og:url" content="./blue-ridge-parkway-tour.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-14 14:15:00+00:00"/>
+  <meta property="article:published_time" content="2024-01-14 14:15:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="./author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -60,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+    <a href="./">
+      <img src="./theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="../"></a>
+      <a href="./"></a>
     </h1>
 
 
@@ -76,31 +75,28 @@
 
             <li>
               <a target="_self"
-                 href="../pages/about.html#about">
-                About
+                 href="./pages/about.html#about">
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/contact.html#contact">
-                Contact
+                 href="./pages/contact.html#contact">
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/rides.html#rides">
-                Rides
+                 href="./pages/rides.html#rides">
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -146,7 +142,7 @@
       
     <h1 id="blue-ridge-parkway-tour">Blue Ridge Parkway Tour</h1>
     <p>
-      Posted on Sun 14 January 2024 in <a href="../category/rides.html">Rides</a>
+      Posted on Sun 14 January 2024 in <a href="./category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -178,15 +174,15 @@
 </tbody>
 </table>
 <div style="text-align: justify">The Blue Ridge Parkway is a National Parkway and All-American Road in the United States, noted for its scenic beauty. The parkway, which is America's longest linear park, runs for 469 miles through 29 counties in Virginia and North Carolina, linking Shenandoah National Park to Great Smoky Mountains National Park.</div>
-<p><img alt="Natchez Trace" src="../images/natchezTrace.jpg" style="display: block; margin: 0 auto"> </p>
+<p><img alt="Natchez Trace" src="./images/natchezTrace.jpg" style="display: block; margin: 0 auto"> </p>
 <div style="text-align: justify">This package starts in Rockfish Gap, Virginia, and takes riders along the the parkway to Ravensford, North Carolina. All fuel stops are planned along the way and fuel costs are included in the package, you simply pull up to the pump and fill your tank! Food options are set before the adventure begins which means you don't have to think about where to eat that next meal because it's already been decided! Your lodging and accommodation options are also laid out before the start of your adventure, and The Unbound Nomad provides your party with a complete packing list to take all the wonder and worry out of preparing for the trip!</div>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="../tag/motorcycles.html">Motorcycles</a>
-      <a href="../tag/lifestyle.html">Lifestyle</a>
-      <a href="../tag/adventure.html">Adventure</a>
-      <a href="../tag/tours.html">Tours</a>
+      <a href="./tag/motorcycles.html">Motorcycles</a>
+      <a href="./tag/lifestyle.html">Lifestyle</a>
+      <a href="./tag/adventure.html">Adventure</a>
+      <a href="./tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -198,7 +194,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
@@ -209,7 +205,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "..",
+  "url" : ".",
   "image": "",
   "description": ""
 }
