--- a/drafts/peak-to-peak-scenic-byway.html
+++ b/drafts/peak-to-peak-scenic-byway.html
@@ -25,7 +25,6 @@
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
@@ -42,7 +41,7 @@
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="../drafts/peak-to-peak-scenic-byway.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-13 20:08:00+00:00"/>
+  <meta property="article:published_time" content="2024-01-13 20:08:00-06:00"/>
   <meta property="article:modified_time" content=""/>
   <meta property="article:author" content="../author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
@@ -75,30 +74,27 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/rides.html#rides">
-                Rides
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -192,7 +188,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
