--- a/impressum.html
+++ b/impressum.html
@@ -10,22 +10,21 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/github.min.css">
+          href="./theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
 
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
@@ -40,11 +39,11 @@
   <meta property="og:title" content="Impressum"/>
   <meta property="og:description" content="The Unbound Nomad Contact: - Email: unboundnomad@unboundnomad.com Legal Representative: Phil Grimes Disclaimer: This Impressum serves as a legal notice in accordance with applicable laws. The information provided here is for informational purposes only. While we strive to keep the information up to date and accurate, we make no representations …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../blog/impressum.html"/>
+  <meta property="og:url" content="./impressum.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-21 10:40:00+00:00"/>
+  <meta property="article:published_time" content="2024-01-21 10:40:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="./author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Privacy"/>
   <meta property="og:image" content="">
@@ -57,12 +56,12 @@
 
 <aside>
   <div>
-    <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+    <a href="./">
+      <img src="./theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="../"></a>
+      <a href="./"></a>
     </h1>
 
 
@@ -73,31 +72,28 @@
 
             <li>
               <a target="_self"
-                 href="../pages/about.html#about">
-                About
+                 href="./pages/about.html#about">
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/contact.html#contact">
-                Contact
+                 href="./pages/contact.html#contact">
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/rides.html#rides">
-                Rides
+                 href="./pages/rides.html#rides">
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -143,7 +139,7 @@
       
     <h1 id="impressum">Impressum</h1>
     <p>
-      Posted on Sun 21 January 2024 in <a href="../category/blog.html">Blog</a>
+      Posted on Sun 21 January 2024 in <a href="./category/blog.html">Blog</a>
 
     </p>
   </header>
@@ -168,7 +164,7 @@ For information on how we handle your personal data, please refer to our Privacy
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="../tag/privacy.html">Privacy</a>
+      <a href="./tag/privacy.html">Privacy</a>
     </p>
   </div>
 
@@ -180,7 +176,7 @@ For information on how we handle your personal data, please refer to our Privacy
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
@@ -191,7 +187,7 @@ For information on how we handle your personal data, please refer to our Privacy
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "..",
+  "url" : ".",
   "image": "",
   "description": ""
 }
