--- a/ohios-windy-9-tour.html
+++ b/ohios-windy-9-tour.html
@@ -10,22 +10,21 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/github.min.css">
+          href="./theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
 
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
@@ -40,11 +39,11 @@
   <meta property="og:title" content="Ohio&#39;s Windy 9 Tour"/>
   <meta property="og:description" content="Distance : Ride Time 890 miles : 25 hours 9 Thrilling Routes, 1 Great Destination. Ohio’s Windy 9 is a motorcycling destination comprised of 9 routes that begin and end in Athens, Ohio. The abundance of curves and elevation change along these roads make this a popular destination for motorcyclists. This …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../blog/ohios-windy-9-tour.html"/>
+  <meta property="og:url" content="./ohios-windy-9-tour.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-13 20:43:00+00:00"/>
+  <meta property="article:published_time" content="2024-01-13 20:43:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="./author/unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -58,12 +57,12 @@
 
 <aside>
   <div>
-    <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+    <a href="./">
+      <img src="./theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="../"></a>
+      <a href="./"></a>
     </h1>
 
 
@@ -74,31 +73,28 @@
 
             <li>
               <a target="_self"
-                 href="../pages/about.html#about">
-                About
+                 href="./pages/about.html#about">
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/contact.html#contact">
-                Contact
+                 href="./pages/contact.html#contact">
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/rides.html#rides">
-                Rides
+                 href="./pages/rides.html#rides">
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -144,7 +140,7 @@
       
     <h1 id="ohios-windy-9-tour">Ohio's Windy 9 Tour</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="../category/blog.html">Blog</a>
+      Posted on Sat 13 January 2024 in <a href="./category/blog.html">Blog</a>
 
     </p>
   </header>
@@ -247,8 +243,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="../tag/motorcycles.html">Motorcycles</a>
-      <a href="../tag/lifestyle.html">Lifestyle</a>
+      <a href="./tag/motorcycles.html">Motorcycles</a>
+      <a href="./tag/lifestyle.html">Lifestyle</a>
     </p>
   </div>
 
@@ -260,7 +256,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
@@ -271,7 +267,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "..",
+  "url" : ".",
   "image": "",
   "description": ""
 }
