--- a/pages/about.html
+++ b/pages/about.html
@@ -25,13 +25,12 @@
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
  
 
-    <meta name="author" content="The Unbound Nomad" />
+    <meta name="author" content="Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
@@ -42,7 +41,7 @@
 
 
 
-  <title>The Unbound Nomad &ndash; About</title>
+  <title>The Unbound Nomad &ndash; | About |</title>
 
 
 </head>
@@ -67,30 +66,27 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/rides.html#rides">
-                Rides
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -134,15 +130,15 @@
 <article class="single">
   <header>
     
-    <h1 id="about">About</h1>
+    <h1 id="about">| About |</h1>
   </header>
   <div>
-<p><img alt="Crazy Horse" height="300" src="../images/crazyHorse.png" style="float:left; padding:16px" width="300"> </p>
+<p><img alt="Hero Image" src="../images/heroImage_trimmed.jpg" style="float:left; padding:16px" width="100%"></p>
 <div style="text-align: justify">Are you a motorcycle enthusiast eager to embrace the thrill of the open road? Look no further than The Unbound Nomad for your passport to unforgettable motorcycle adventures across the United States. Our passion is fueled by the desire to provide riders like you with the ultimate adventure experience, offering meticulously crafted vacation packages that cater to your thirst for the open road.</div>
 <p><br></p>
 <div style="text-align: justify">The Unbound Nomad understands that every rider seeks something unique from their journey. Whether it's a leisurely day tour around the scenic Put-in-Bay, a weekend escape to explore the wonders of a National Park, an exciting vacation to iconic events like Sturgis or Daytona Bike Week, or a once-in-a-lifetime expedition across historic Route 66 – we've got you covered.</div>
 <p><br>
-<img alt="Full Throttle" height="400" src="../images/fullThrottle2.jpg" style="float:right; padding:16px" width="194"> </p>
+<img alt="Full Throttle" src="../images/fullThrottle2.jpg" style="float:right; padding:16px" width="40%"> </p>
 <div style="text-align: justify">What sets us apart is our commitment to taking care of all the intricate details, so you can focus on what matters most – enjoying the ride. From meticulous route planning that maximizes scenic vistas to ensuring you have a full tank of fuel and delectable meals along the way, we handle every aspect of your adventure. Rest assured, we've thought of everything, including comfortable lodging that complements the spirit of your journey.</div>
 <p><br></p>
 <div style="text-align: justify">The Unbound Nomad is dedicated to curating experiences that transcend the ordinary. We believe that the journey is as important as the destination, and we strive to make every moment on the road an unforgettable memory. Whether you're a seasoned rider or a newcomer to the world of motorcycle adventures, our packages are designed to cater to all levels of expertise.</div>
@@ -151,7 +147,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
