--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,13 +25,12 @@
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
  
 
-    <meta name="author" content="The Unbound Nomad" />
+    <meta name="author" content="Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
@@ -42,7 +41,7 @@
 
 
 
-  <title>The Unbound Nomad &ndash; Contact</title>
+  <title>The Unbound Nomad &ndash; | Contact |</title>
 
 
 </head>
@@ -67,30 +66,27 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/rides.html#rides">
-                Rides
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -134,7 +130,7 @@
 <article class="single">
   <header>
     
-    <h1 id="contact">Contact</h1>
+    <h1 id="contact">| Contact |</h1>
   </header>
   <div>
 <p>Welcome to our contact page! We're excited to hear from you. If you have any questions, suggestions, or just want to say hello, feel free to reach out through the following channels:</p>
@@ -156,7 +152,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
