--- a/pages/rides.html
+++ b/pages/rides.html
@@ -25,13 +25,12 @@
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
  
 
-    <meta name="author" content="The Unbound Nomad" />
+    <meta name="author" content="Unbound Nomad" />
     <meta name="description" content="" />
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:type" content="blog"/>
@@ -42,7 +41,7 @@
 
 
 
-  <title>The Unbound Nomad &ndash; Rides</title>
+  <title>The Unbound Nomad &ndash; | Rides |</title>
 
 
 </head>
@@ -67,30 +66,27 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/rides.html#rides">
-                Rides
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -134,7 +130,7 @@
 <article class="single">
   <header>
     
-    <h1 id="rides">Rides</h1>
+    <h1 id="rides">| Rides |</h1>
   </header>
   <div>
 <p>In addition to custom vacation packages, available year-round, here is our 2024 ride calendar:</p>
@@ -154,7 +150,7 @@
 </tr>
 <tr>
 <td style="text-align: center;">2/28/2024</td>
-<td style="text-align: left;">Sunshine Run</td>
+<td style="text-align: left;"><a href="../daytona-bike-week.html">Sunshine Run</a></td>
 <td style="text-align: left;">Run from Ohio to Daytona Bike Week</td>
 </tr>
 <tr>
@@ -164,7 +160,7 @@
 </tr>
 <tr>
 <td style="text-align: center;">5/24/2024</td>
-<td style="text-align: left;">Buckeye Run</td>
+<td style="text-align: left;"><a href="../ohio-bike-week.html#ohio-bike-week">Buckeye Run</a></td>
 <td style="text-align: left;">Run to Ohio Bike Week</td>
 </tr>
 <tr>
@@ -214,7 +210,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
