--- a/san-juan-mountain-skyway-tour.html
+++ b/san-juan-mountain-skyway-tour.html
@@ -10,22 +10,21 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/github.min.css">
+          href="./theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
 
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
@@ -40,11 +39,11 @@
   <meta property="og:title" content="San Juan Mountain Skyway Tour"/>
   <meta property="og:description" content="Distance : Ride Time 235 miles : 6 hours This loop trip can be done in one day, or divided up into 3 days of adventure in the area. The ride starts in Durango, a well-preserved descendant of the Old West and takes us along the San Juan Mountain Skyway, through Trimble …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../blog/san-juan-mountain-skyway-tour.html"/>
+  <meta property="og:url" content="./san-juan-mountain-skyway-tour.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-13 20:04:00+00:00"/>
+  <meta property="article:published_time" content="2024-01-13 20:04:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="./author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -60,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+    <a href="./">
+      <img src="./theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="../"></a>
+      <a href="./"></a>
     </h1>
 
 
@@ -76,31 +75,28 @@
 
             <li>
               <a target="_self"
-                 href="../pages/about.html#about">
-                About
+                 href="./pages/about.html#about">
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/contact.html#contact">
-                Contact
+                 href="./pages/contact.html#contact">
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/rides.html#rides">
-                Rides
+                 href="./pages/rides.html#rides">
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -146,7 +142,7 @@
       
     <h1 id="san-juan-mountain-skyway-tour">San Juan Mountain Skyway Tour</h1>
     <p>
-      Posted on Sat 13 January 2024 in <a href="../category/rides.html">Rides</a>
+      Posted on Sat 13 January 2024 in <a href="./category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -178,15 +174,15 @@
 </tbody>
 </table>
 <div style="text-align: justify">This loop trip can be done in one day, or divided up into 3 days of adventure in the area. The ride starts in Durango, a well-preserved descendant of the Old West and takes us along the San Juan Mountain Skyway, through Trimble, Hermosa, and insto Silverton. Ride the Million Dollar Highway from Silverton to Ouray, and into Ridgeway. Catch the views of Whipple Mountain, Mt. Sneffels, and Dallas Peak as the adventure takes you through Sams, Placerviller, and into picturesque Telluride, renowned for world-class skiing and film, jazz, and bluegrass festivals. Wind your way along the Delores River into Delores itself before finding your way to the final destination of this adventure in Mesa Verde National Park, home to one of the densest collections of prehistoric ruins in the U.S. - and five million acres of undisturbed national forest where you'll snake through the woods in the shadow of impressive 14,000-foot peaks.</div>
-<p><img alt="San Juan Mountain Skyway" src="../images/SanJuanMountainSkyway.jpg"></p>
+<p><img alt="San Juan Mountain Skyway" src="./images/SanJuanMountainSkyway.jpg"></p>
 <div style="text-align: justify">The San Juan Skyway was designated by the U.S. Secretary of Transportation as an All-American Road, the highest level of designation, in 1996. It is one of 13 America's Byways® designated in Colorado.</div>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="../tag/motorcycles.html">Motorcycles</a>
-      <a href="../tag/lifestyle.html">Lifestyle</a>
-      <a href="../tag/adventure.html">Adventure</a>
-      <a href="../tag/tours.html">Tours</a>
+      <a href="./tag/motorcycles.html">Motorcycles</a>
+      <a href="./tag/lifestyle.html">Lifestyle</a>
+      <a href="./tag/adventure.html">Adventure</a>
+      <a href="./tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -198,7 +194,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
@@ -209,7 +205,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "..",
+  "url" : ".",
   "image": "",
   "description": ""
 }
