--- a/skyline-drive-tour.html
+++ b/skyline-drive-tour.html
@@ -10,22 +10,21 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="../theme/pygments/github.min.css">
+          href="./theme/pygments/github.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/solid.css">
 
 
 
 
-  <link href="http://unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
 
 
 
@@ -40,11 +39,11 @@
   <meta property="og:title" content="Skyline Drive Tour"/>
   <meta property="og:description" content="Distance : Ride Time 105 miles : 3.5 hours Virginia&#39;s Skyline Drive is a National Scenic Byway that runs 105 miles along the crest of the Blue Ridge Mountains starting in the north of the Shenandoah Valley at Front Royal to Waynesboro, where it meets the Blue Ridge Parkway. Skyline Drive …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="../blog/skyline-drive-tour.html"/>
+  <meta property="og:url" content="./skyline-drive-tour.html"/>
   <meta property="og:type" content="article"/>
-  <meta property="article:published_time" content="2024-01-14 11:45:00+00:00"/>
+  <meta property="article:published_time" content="2024-01-14 11:45:00-06:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="./author/unbound-nomad.html">
   <meta property="article:section" content="Rides"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
@@ -60,12 +59,12 @@
 
 <aside>
   <div>
-    <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+    <a href="./">
+      <img src="./theme/img/profile.png" alt="" title="">
     </a>
 
     <h1>
-      <a href="../"></a>
+      <a href="./"></a>
     </h1>
 
 
@@ -76,31 +75,28 @@
 
             <li>
               <a target="_self"
-                 href="../pages/about.html#about">
-                About
+                 href="./pages/about.html#about">
+                | About |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/contact.html#contact">
-                Contact
+                 href="./pages/contact.html#contact">
+                | Contact |
               </a>
             </li>
             <li>
               <a target="_self"
-                 href="../pages/rides.html#rides">
-                Rides
+                 href="./pages/rides.html#rides">
+                | Rides |
               </a>
             </li>
 
           <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
+            <a target="_self" href="https://lexin-moto.com" >| Lexin Moto |</a>
           </li>
           <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
+            <a target="_self" href="https://shoei-helmets.com/" >| Shoei Helmets | </a>
           </li>
       </ul>
     </nav>
@@ -146,7 +142,7 @@
       
     <h1 id="skyline-drive-tour">Skyline Drive Tour</h1>
     <p>
-      Posted on Sun 14 January 2024 in <a href="../category/rides.html">Rides</a>
+      Posted on Sun 14 January 2024 in <a href="./category/rides.html">Rides</a>
 
     </p>
   </header>
@@ -178,15 +174,15 @@
 </tbody>
 </table>
 <div style="text-align: justify">Virginia's Skyline Drive is a National Scenic Byway that runs 105 miles along the crest of the Blue Ridge Mountains starting in the north of the Shenandoah Valley at Front Royal to Waynesboro, where it meets the Blue Ridge Parkway. Skyline Drive is Shenandoah National Park’s linear conduit, with 75 overlooks connecting travelers to all the major visitor centers, campgrounds, lodges, picnic areas and most trailheads. Concrete posts numbered every mile keep you apprised of your whereabouts. The Drive is a worthy destination in its own right.</div>
-<p><img alt="Skyline Drive" src="../images/skylineDrive.jpg" style="display: block; margin: 0 auto"> </p>
+<p><img alt="Skyline Drive" src="./images/skylineDrive.jpg" style="display: block; margin: 0 auto"> </p>
 <div style="text-align: justify">Fall is the most popular time to travel along Skyline Drive, with its colorful foliage from late September to mid-November. But spring offers the most colorful wildflowers along the drive, as well as blooming azaleas and mountain laurel.</div>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="../tag/motorcycles.html">Motorcycles</a>
-      <a href="../tag/lifestyle.html">Lifestyle</a>
-      <a href="../tag/adventure.html">Adventure</a>
-      <a href="../tag/tours.html">Tours</a>
+      <a href="./tag/motorcycles.html">Motorcycles</a>
+      <a href="./tag/lifestyle.html">Lifestyle</a>
+      <a href="./tag/adventure.html">Adventure</a>
+      <a href="./tag/tours.html">Tours</a>
     </p>
   </div>
 
@@ -198,7 +194,7 @@
 </article>
 
 <footer>
-	<p class = "credit">Copyright &copy 1999 - <script type="text/javascript">
+	<p class = "credit">Copyright &copy 2020 - <script type="text/javascript">
 		document.write(new Date().getFullYear()); </script>
 		The Unbound Nomad | Powered by <a href="http://getpelican.com">Pelican</a></span>
 	</p>
@@ -209,7 +205,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
-  "url" : "..",
+  "url" : ".",
   "image": "",
   "description": ""
 }
